# linux-sensor-agent

./: Cargo.toml  config.toml
service/: bootstrap.sh  sensor-agent.service
src/: config.rs  cpu.rs  gpu.rs  main.rs  memory.rs  network.rs  sensors.rs  utils.rs
