[package]
name = "linux-sensor-agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sensors = "0.2.1"
regex = "1"
serde = {version = "1.0"}
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
lazy_static = "1.4.0"